@@ -1,3 +1,10 @@
+2009-03-27  Dan Winship  <danw@gnome.org>
+
+	* docs/reference/client-howto.xml: clarify that SoupSessionAsync
+	is not thread-safe, and that setting a non-default GMainContext on
+	a non-threadsafe object means you can only use that object from
+	that GMainContext's thread.
+
 2009-03-26  Milan Crha  <mcrha@redhat.com>
 
 	Bug 574957 - soup-session-sync doesn't unlock mutex on proxy error
